2011-06-08  Paul Eggert  <eggert@cs.ucla.edu>

	* alloc.c (Fmake_bool_vector): Don't assume vector size fits in int.
	(allocate_vectorlike): Check for ptrdiff_t overflow.

	* alloc.c: Catch some string size overflows that we were missing.
	(XMALLOC_OVERRUN_CHECK_SIZE) [!XMALLOC_OVERRUN_CHECK]: Define to 0,
	for convenience in STRING_BYTES_MAX.
	(STRING_BYTES_MAX): New macro, superseding the old one in lisp.h.
	The definition here is exact; the one in lisp.h was approximate.
	(allocate_string_data): Check for string overflow.  This catches
	some instances we weren't catching before.  Also, it catches
	size_t overflow on (unusual) hosts where SIZE_MAX <= min
	(PTRDIFF_MAX, MOST_POSITIVE_FIXNUM), e.g., when size_t is 32 bits
	and ptrdiff_t and EMACS_INT are both 64 bits.

	* character.c, coding.c, doprnt.c, editfns.c, eval.c:
	All uses of STRING_BYTES_MAX replaced by STRING_BYTES_BOUND.
	* lisp.h (STRING_BYTES_BOUND): Renamed from STRING_BYTES_MAX.

2011-06-07  Paul Eggert  <eggert@cs.ucla.edu>

	* character.c (string_escape_byte8): Fix nbytes/nchars typo.

	* alloc.c (Fmake_string): Check for out-of-range init.

2011-06-07  Daniel Colascione  <dan.colascione@gmail.com>

	* fns.c (Fputhash): Document return value.

2011-06-06  Chong Yidong  <cyd@stupidchicken.com>

	* image.c (gif_load): Implement gif89a spec "no disposal" method.

2011-06-06  Paul Eggert  <eggert@cs.ucla.edu>

	Cons<->int and similar integer overflow fixes (Bug#8794).

	Check for overflow when converting integer to cons and back.
	* charset.c (Fdefine_charset_internal, Fdecode_char):
	Use cons_to_unsigned to catch overflow.
	(Fencode_char): Use INTEGER_TO_CONS.
	* composite.h (LGLYPH_CODE): Use cons_to_unsigned.
	(LGLYPH_SET_CODE): Use INTEGER_TO_CONS.
	* data.c (long_to_cons, cons_to_long): Remove.
	(cons_to_unsigned, cons_to_signed): New functions.
	These signal an error for invalid or out-of-range values.
	* dired.c (Ffile_attributes): Use INTEGER_TO_CONS.