@@ -2,6 +2,9 @@
 
 	* alloc.c (Fmake_bool_vector): Don't assume vector size fits in int.
 	(allocate_vectorlike): Check for ptrdiff_t overflow.
+	(mark_vectorlike, mark_char_table, mark_object): Avoid EMACS_UINT
+	when a (possibly-narrower) signed value would do just as well.
+	We prefer using signed arithmetic, to avoid comparison confusion.
 
 	* alloc.c: Catch some string size overflows that we were missing.
 	(XMALLOC_OVERRUN_CHECK_SIZE) [!XMALLOC_OVERRUN_CHECK]: Define to 0,
